2007-03-07  John W. Eaton  <jwe@octave.org>

	* Array.cc (assign1 (Array<LT>&, const Array<RT>&, const LT&)):
	Only allow resizing empty LHS if it is 0x0.

	* Array.cc (Array<T>::maybe_delete_elements (Array<idx_vector>&,
	const T&)): Handle case of more indices than dimensions.
	(assign (Array<LT>&, const Array<RT>&, const LT&)): Allow more
	cases to be handled by assignN.
	(assignN (Array<LT>&, const Array<RT>&, const LT&)):
	Special cases for 2-d array assignments for speed.
	Improve handling of scalar RHS and empty indices.

2007-03-05  David Bateman  <dbateman@free.fr>

	* oct-md5.c (oct_md5_file (const std::string&)): New function.
	* oct-md5.h (oct_md5_file (const std::string&)): Declare it.

2007-03-02  John W. Eaton  <jwe@octave.org>

	* str-vec.h (string_vector::empty): Return bool, not int.

2007-03-01  David Bateman  <dbateman@free.fr>

        * md5.h, md5.c: New files from libmd5-rfc sourceforge project for
        an independent implementation of RFC1321.
        * oct-md5.h, oct-md5: New files for treating std::string class
        with MD5.
        * Makefile.in (INCLUDES): Add md5.h and oct-md5.h
        (LIBOCTAVE_CXX_SOURCES): Add oct-md5.cc
        (LIBOCTAVE_C_SOURCES): Add md5.c

2007-02-27  John W. Eaton  <jwe@octave.org>

	* Makefile.in (uninstall): Delete files listed in
	$(INCLUDES_FOR_INSTALL), instead of $(INCLUDES).
	From Thomas Treichl <Thomas.Treichl@gmx.net>.

2007-02-27  From Michael Goffioul  <michael.goffioul@swing.be>

	* file-ops.cc (file_ops::recursive_rmdir):
	Close dir_entry object before calling rmdir.

2007-02-26  From Michael Goffioul  <michael.goffioul@swing.be>

	* Makefile.in: Use $(LN_S) instead of ln or ln -s.

	* sparse-util.h (SparseCholPrint, SparseCholError):
	Tag with OCTAVE_API.

2007-02-18  David Bateman  <dbateman@free.fr>

	* oct-rand.cc (do_old_initialization()): call setcgn(1) prior to
	calling setall and reset to the current generator after.

2007-02-16  John W. Eaton  <jwe@octave.org>
